# fossil_shipment_tracker

./: .dockerignore  .env.template  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile.engine  Pipfile  README.md  SCRIPTS.md  SETUP.md  TROUBLESHOOTING.md  app.py  app_production.yaml  app_production_basic.yaml  callbased.py  check_integrity.py  cloudbuild-engine.yaml  flush_redis.sh  integrity.py  main.py  requirements.txt  update.py  update_company.py  update_history.py  update_insurance.py  update_lite.py  update_main.py
api/: .gcloudignore  Pipfile  SETUP.md  __init__.py  api_development.yaml  api_production.yaml  app.py  app.yaml  app_development.yaml  app_production.yaml  encoder.py  environment.yml  pyproject.toml  requirements.txt
api/assets/kpler/: crude_exports.csv  diesel_exports.csv  (+5 more)
api/routes/: __init__.py  aggregated.py  alert.py  berth.py  commodity.py  comtrade.py  counter.py  counter_last.py  counter_last_tmp.py  departure.py  endpoint_cache.py  entsogflow.py  flaring.py  flow.py  kpler.py  kpler_flow.py  kpler_scraper.py  kpler_trade.py  kpler_v1.py  overland.py  pipeline.py  pipelineflow.py  port.py  portcall.py  position.py  postcompute.py  price.py  security.py  ship.py  statistics.py  template.py  voyage.py
api/tests/: conftest.py  pytest.ini  test_charts.py  test_counter.py  test_currency.py  test_endpoints.py  test_flaring.py  test_kpler.py  test_overland.py  test_pricing.py  test_sanity.py  test_voyage.py
base/: __init__.py  db.py  db_utils.py  encoder.py  env.py  logger.py  pyproject.toml  utils.py
base/base/: __init__.py  db.py  encoder.py  env.py  kpler.py  logger.py  utils.py
base/models/: __init__.py  kpler.py  models.py  table_names.py
engine/: Pipfile  SETUP.md  alert.py  arrival.py  backuper.py  berth.py  check_integrity.py  commodity.py  company.py  counter.py  country.py  currency.py  datalastic.py  departure.py  destination.py  detect_flows.sql  entsog.py  environment.yml  equasis.py  event_shipment_clean_up.sql  event_shipment_rebuild.sql  event_shipment_refresh.sql  flaring.py  flaring_anomaly_index.sql  flow.py  flow_rebuild.sql  flow_refresh.sql  insurance.py  integrity.py  kpler.py  kpler_scraper.py  kpler_trade_computed.py  marinetraffic.py  mtevents.py  port.py  portcall.py  position.py  pyproject.toml  rscript.py  set_rlimit.py  (+11 more)
engine/assets/: 2024_07_recent_vessel_subset.csv  alert_email_template.html  alert_email_template.txt  companies.csv  kpler  mtevent_type.csv  portcalls.csv
engine/company_scraper/: __init__.py  company_imo_scraper.py  equasis.py
engine/engines/: alert.py  arrival.py  backuper.py  berth.py  commodity.py  company.py  comtrade.py  counter.py  country.py  currency.py  datalastic.py  departure.py  destination.py  engine_r.py  entsog.py  flaring.py  global_cache.py  insurance.py  kpler_trade_computed.py  marinetraffic.py  mtevents.py  port.py  portcall.py  position.py  requirements_org.txt  rscript.py  ship.py  shipment.py  shipment_rebuild.sql  shipment_refresh.sql  shipment_refresh_sts.sql  sts.py  terminal.py  trajectory.py
engine/insurance_scraper/: __init__.py  insurance_scraper.py  is_american_steamship.py  is_britannia_steamship.py  is_charles_taylor.py  is_gard.py  is_hydor.py  is_japan_ship_owners.py  is_london_pi.py  is_north_of_england_pi.py  is_ship_owners_mutual.py  is_skuld.py  is_standard_club.py  is_steamship_mutual_underwriting.py  is_sveriges_angfartys.py  is_uk_pi_club.py  is_west_of_england.py
engine/integrity/: __init__.py  check_comtrade.py  check_kpler_trade.py  check_kpler_trade_computed.py  checker.py  checks.py  integrity_check_definition.py  steps.py
engine/kpler_scraper/: __init__.py  misc.py  scraper.py  scraper_flow.py  scraper_flows.py  scraper_product.py  scraper_trade.py  update.py  update_flow.py  update_is_valid.sql  update_product.py  update_trade.py  upload.py
engine/run/: backfill_kpler_sync_history.py  check_integrity.py  rebuild_pricing.py  update_commodities.py  update_company.py  update_company_ignore_limit.py  update_counter.py  update_counter_force.py  update_currency.py  update_engine_r_and_dependencies.py  update_flaring.py  update_from_kpler.py  update_historic_russia.py  update_kpler.py  update_kpler_historical.py  update_kpler_recent.py  update_kpler_secret.py  update_kpler_sync_status.py  update_lite.py  update_main.py  update_refill_kpler_computed_table.py  update_rscript_and_dependencies.py  validate_kpler_history_ru.py  verify_kpler.py
engine/test/: conftest.py  test_initial_fill.py
engine/tests/: conftest.py  it_comtrade_client.py  mock_db_module.py  pytest-integration.ini  pytest-system.ini  pytest-unit.ini  pytest.ini  system_test_alerts.py  system_test_company.py  system_test_datalastic.py  system_test_entsog.py  system_test_flaring.py  system_test_kpler.py  system_test_marinetraffic.py  system_test_mtevents.py  system_test_ship.py  system_test_shipment.py  system_test_sts.py  test_alerts.py  test_company.py  test_comtrade.py  test_comtrade_client.py  test_datalastic.py  test_entsog.py  test_equasis.py  test_event_shipment.py  test_flaring.py  test_imports.py  test_initial_fill.py  test_kpler.py  test_marinetraffic.py  test_mtevents.py  test_sanity.py  test_ship.py  test_shipment.py  test_sts.py
tools/: Pipfile  pyproject.toml
(+267 files in other folders)
