[tool.poetry]
name = "fossil-shipment-tracker-engine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = ">=1.5.3,<1.6.0"
sqlalchemy = ">=1.4.52,<1.5.0"
numpy = ">=1.23.5,<1.24.0"
pytest = ">=7.0.1,<7.1.0"
flask = ">=2.0.3,<2.1.0"
flask-mail = ">=0.9.1,<0.10.0"
slack-logger = "^0.3.1"
slack-sdk = "^3.27.1"
requests = ">=2.28.2,<2.29.0"
shapely = ">=1.8.5.post1,<1.9.0"
pyproj = "^3.6.1"
geopandas = "^0.14.3"
tqdm = "^4.66.2"
psycopg2 = "^2.9.9"
google-cloud-secret-manager = "^2.18.3"
geoalchemy2 = "^0.14.6"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
bs4 = "^0.0.2"
kpler-sdk = "^1.0.43"
country-converter = "^1.2"
unidecode = "^1.3.8"
pyreadr = "^0.5.0"
forex-python = "^1.8"
google-cloud-run = "^0.10.5"
pygeos = "^0.14"
scikit-image = "^0.22.0"
rasterio = "^1.3.9"
matplotlib = "^3.8.3"
python-decouple = "^3.8"
pymongo = "^4.6.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
