[tool.poetry]
name = "fossil-shipment-tracker-engine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = ">=1.5.3,<1.6.0"
sqlalchemy = ">=1.4.52,<1.5.0"
numpy = ">=1.23.5,<1.24.0"
pytest = ">=7.0.1,<7.1.0"
flask = "^3.0.2"
flask-mail = "^0.9.1"
slack-logger = "^0.3.1"
slack-sdk = "^3.27.1"
requests = ">=2.28.2,<2.29.0"
pyproj = "^3.6.1"
tqdm = "^4.66.2"
psycopg2 = "^2.9.9"
google-cloud-secret-manager = "^2.18.3"
geoalchemy2 = "^0.13.1"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
bs4 = "^0.0.2"
kpler-sdk = "^1.0.43"
country-converter = "^1.2"
unidecode = "^1.3.8"
pyreadr = "^0.5.0"
forex-python = "^1.8"
google-cloud-run = "^0.10.5"
scikit-image = "^0.22.0"
rasterio = "^1.3.9"
matplotlib = "^3.8.3"
python-decouple = "^3.8"
pymongo = "^4.6.2"
seaborn = "^0.13.2"
base = {path = "../base"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
base = {path = "../base", develop = true}
