[tool.poetry]
name = "fossil-shipment-tracker-tools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
python-decouple = "^3.8"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
